All visible bugs fixed,